Arreglado error al añadir estado online

--- a/Racing Thieves 1.8/index.html
+++ b/Racing Thieves 1.8/index.html
@@ -33,7 +33,7 @@
             game.state.add('create', CatCatcher.createState);
             game.state.add('join', CatCatcher.joinState);
             game.state.add('arcade', CatCatcher.arcadeState);
-            game.state.add('arcade', CatCatcher.onlineState);
+            game.state.add('online', CatCatcher.onlineState);
 
             game.state.start('boot');
 
